--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
-  "keywords": ["github", "api", "images", "oauth", "rest"],
+  "keywords": [
+    "github",
+    "api",
+    "images",
+    "oauth",
+    "rest"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "passport": "^0.6.0",
-    "passport-github2": "^0.1.12",
-    "octokit": "^2.0.14",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
-    "sqlite3": "^5.1.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "jimp": "^0.22.10",
+    "multer": "^1.4.5-lts.1",
+    "octokit": "^2.0.14",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "sharp": "^0.32.6",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -35,4 +42,3 @@
     "node": ">=16.0.0"
   }
 }
-
